--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -10,10 +10,8 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="./demo-phone.apk"
-patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
-seed=0
 encrypt_pck=false
 encrypt_directory=false
 script_export_mode=2
@@ -47,10 +45,8 @@ package/show_as_launcher_app=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
-launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
 xr_features/xr_mode=0
-gesture/swipe_to_dismiss=false
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
@@ -66,7 +62,6 @@ permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
 permissions/access_fine_location=false
 permissions/access_location_extra_commands=false
-permissions/access_media_location=false
 permissions/access_mock_location=false
 permissions/access_network_state=false
 permissions/access_surface_flinger=false
@@ -154,10 +149,6 @@ permissions/read_frame_buffer=false
 permissions/read_history_bookmarks=false
 permissions/read_input_state=false
 permissions/read_logs=false
-permissions/read_media_audio=false
-permissions/read_media_images=false
-permissions/read_media_video=false
-permissions/read_media_visual_user_selected=false
 permissions/read_phone_state=false
 permissions/read_profile=false
 permissions/read_sms=false
@@ -214,6 +205,78 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+launcher_icons/adaptive_monochrome_432x432=""
+gesture/swipe_to_dismiss=false
+permissions/access_media_location=false
+permissions/read_media_audio=false
+permissions/read_media_images=false
+permissions/read_media_video=false
+permissions/read_media_visual_user_selected=false
 dotnet/include_scripts_content=false
 dotnet/include_debug_symbols=true
 dotnet/embed_build_outputs=false
+
+[preset.1]
+
+name="Windows Desktop"
+platform="Windows Desktop"
+runnable=true
+advanced_options=false
+dedicated_server=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="./demo-phone.exe"
+encryption_include_filters=""
+encryption_exclude_filters=""
+encrypt_pck=false
+encrypt_directory=false
+script_export_mode=2
+
+[preset.1.options]
+
+custom_template/debug=""
+custom_template/release=""
+debug/export_console_wrapper=1
+binary_format/embed_pck=true
+texture_format/s3tc_bptc=true
+texture_format/etc2_astc=false
+binary_format/architecture="x86_64"
+codesign/enable=false
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PackedStringArray()
+application/modify_resources=true
+application/icon="res://assets/sprites/fall_0.png"
+application/console_wrapper_icon=""
+application/icon_interpolation=4
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
+application/export_angle=0
+application/export_d3d12=0
+application/d3d12_agility_sdk_multiarch=true
+ssh_remote_deploy/enabled=false
+ssh_remote_deploy/host="user@host_ip"
+ssh_remote_deploy/port="22"
+ssh_remote_deploy/extra_args_ssh=""
+ssh_remote_deploy/extra_args_scp=""
+ssh_remote_deploy/run_script="Expand-Archive -LiteralPath '{temp_dir}\\{archive_name}' -DestinationPath '{temp_dir}'
+$action = New-ScheduledTaskAction -Execute '{temp_dir}\\{exe_name}' -Argument '{cmd_args}'
+$trigger = New-ScheduledTaskTrigger -Once -At 00:00
+$settings = New-ScheduledTaskSettingsSet
+$task = New-ScheduledTask -Action $action -Trigger $trigger -Settings $settings
+Register-ScheduledTask godot_remote_debug -InputObject $task -Force:$true
+Start-ScheduledTask -TaskName godot_remote_debug
+while (Get-ScheduledTask -TaskName godot_remote_debug | ? State -eq running) { Start-Sleep -Milliseconds 100 }
+Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue"
+ssh_remote_deploy/cleanup_script="Stop-ScheduledTask -TaskName godot_remote_debug -ErrorAction:SilentlyContinue
+Unregister-ScheduledTask -TaskName godot_remote_debug -Confirm:$false -ErrorAction:SilentlyContinue
+Remove-Item -Recurse -Force '{temp_dir}'"
